--- a/app/views/stuff/index.html.erb
+++ b/app/views/stuff/index.html.erb
@@ -8,10 +8,17 @@
   <div class="container">
     <div class="cards row">
     	<% @stuff.each do |s| %>
-        <div class="card col-xs-4">
-          <%= image_tag s.image %>
-          <h2><%= s.name %></h2>
-          <h2><%= s.description %></h2>
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <%= image_tag s.image %>
+              <div class="caption">
+                <h3><%= s.name %></h3>
+                <p><%= s.description %></p>
+                <p><a href="/edit" class="btn btn-primary" role="button">Edit</a> <a href="/delete" class="btn btn-default" role="button">Delete</a></p>
+              </div>
+            </div>
+          </div>
         </div>
       <% end %>
     </div>
