--- a/app/views/stuff/index.html.erb
+++ b/app/views/stuff/index.html.erb
@@ -4,23 +4,26 @@
   </div>
 </div>
 
-<div class="tags">
-  <div class="container">
-    <div class="cards row">
-    	<% @stuff.each do |s| %>
-        <div class="row">
-          <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-              <%= image_tag s.image %>
-              <div class="caption">
-                <h3><%= s.name %></h3>
-                <p><%= s.description %></p>
-                <p><a href="/edit" class="btn btn-primary" role="button">Edit</a> <a href="/delete" class="btn btn-default" role="button">Delete</a></p>
-              </div>
-            </div>
+<div class="container">
+  <div class="row">
+    <%= button_to "New stuff", {action: "new"}, {class: 'btn btn-info pull-right'} %>
+  </div>
+	<% @stuff.each_with_index do |s, index| %>
+    <% if index % 3 == 0 %>
+      <div class="row">
+    <% end %>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= image_tag s.image %>
+          <div class="caption">
+            <h3><%= s.name %></h3>
+            <p><%= s.description %></p>
+            <p><a href="/edit" class="btn btn-primary" role="button">Edit</a> <a href="/delete" class="btn btn-default" role="button">Delete</a></p>
           </div>
         </div>
-      <% end %>
+      </div>
+    <% if index % 3 == 2 %>
     </div>
-  </div>
+    <% end %>
+  <% end %>
 </div>
