--- a/app/views/stuff/index.html.erb
+++ b/app/views/stuff/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container">
   <div class="row">
-    <%= button_to "New stuff", {action: "new"}, {class: 'btn btn-info pull-right'} %>
+    <%= link_to "New stuff", {action: "new"}, {class: 'btn btn-info pull-right'} %>
   </div>
 	<% @stuff.each_with_index do |s, index| %>
     <% if index % 3 == 0 %>
@@ -18,7 +18,8 @@
           <div class="caption">
             <h3><%= s.name %></h3>
             <p><%= s.description %></p>
-            <p><a href="/edit" class="btn btn-primary" role="button">Edit</a> <a href="/delete" class="btn btn-default" role="button">Delete</a></p>
+            <%= link_to "Edit", edit_path(s), {class: 'btn btn-primary'} %>
+            <%= link_to "Delete", delete_path(s), {class: 'btn btn-default'} %>
           </div>
         </div>
       </div>
